--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-command = "npm install --legacy-peer-deps"
+command = " npm install @mui/lab --legacy-peer-deps  && npm install --legacy-peer-deps"
