--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-command = " npm install @mui/lab --legacy-peer-deps  && npm install --legacy-peer-deps"
+command = " npm install @mui/core --legacy-peer-deps  && npm install @mui/lab --legacy-peer-deps && npm install  @mui/material --legacy-peer-deps &&  npm i @emotion --legacy-peer-deps && npm i @emotion/styled --legacy-peer-deps  && npm i @emotion/react --legacy-peer-deps &&  npm install emailjs-com --legacy-peer-deps  &&  npm install @emailjs/browser --legacy-peer-deps && npm install  --legacy-peer-deps"
