--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
-  }
+  },
+    "resolutions": {
+      "@types/react": "18.3.3"
+    }
+  
+  
+
 }
